--- a/package.json
+++ b/package.json
@@ -12,19 +12,29 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "build": "tsc && chmod 755 dist/index.js",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix"
   },
   "dependencies": {
-    "googleapis": "^128.0.0",
-    "dotenv": "^16.3.1",
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "zod": "^3.22.4",
-    "google-auth-library": "^9.4.1"
+    "dotenv": "^16.3.1",
+    "google-auth-library": "^9.4.1",
+    "googleapis": "^128.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/node": "^20.11.19",
-    "typescript": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   }
 }
