remove OPS branch from push trigger

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: 
-    - main
-    - OPS-1022/deploy-gtm-mcp
+    branches: main
   workflow_dispatch:
 
 jobs:
