--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@unboundai/gtm-mcp-server",
-  "version": "3.1.0",
+  "version": "3.1.2",
   "description": "MCP server for Google Tag Manager",
   "license": "Apache-2.0",
   "author": "stape.io & tijevlam",
   "homepage": "https://github.com/tijevlam/unboundai-google-tag-manager-mcp-server",
   "type": "module",
   "main": "dist/index.js",
-  "bin": {
-    "unboundai-gtm-mcp-server": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "keywords": [
     "mcp",
     "modelcontextprotocol",
@@ -40,7 +38,9 @@
     "dotenv": "^16.3.1",
     "google-auth-library": "^9.4.1",
     "googleapis": "^128.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "typescript": "^5.8.3",
+    "@types/node": "^20.11.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
