--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unboundai/gtm-mcp-server",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "MCP server for Google Tag Manager",
   "license": "Apache-2.0",
   "author": "stape.io & tijevlam",
@@ -16,7 +16,6 @@
   ],
   "scripts": {
     "build": "tsc",
-    "postinstall": "npm run build",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
     "prepublish": "npm run build",
@@ -38,9 +37,7 @@
     "dotenv": "^16.3.1",
     "google-auth-library": "^9.4.1",
     "googleapis": "^128.0.0",
-    "zod": "^3.22.4",
-    "typescript": "^5.8.3",
-    "@types/node": "^20.11.19"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
