--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,4 @@ dist
 
 
 trafficbuildersgoog-ga4-gtm-mcp.json
+client_secret_648174941984-f9sk8m99cmln7b75tkuhdgfiv60ajq7c.apps.googleusercontent.com.json
